--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -29,7 +29,7 @@ jobs:
         node-version: '20'
         cache: 'npm'
 
-    - name'': Install dependencies
+    - name: Install dependencies
       run: npm install
 
     - name: Build the app
